fix: fixed date picking problem on mobile, made example not zoomable for iOS purposes, added demo for readme, added html lang property and fixed deploying path for gh-pages

--- a/src/mobile/style.module.css
+++ b/src/mobile/style.module.css
@@ -11,3 +11,7 @@
     transform: translate(-50%, -50%);
     z-index: -1;
 }
+
+.placeholder {
+    color: #ddd;
+}
